Add the checkout screen

--- a/IPSX/Storyboard/Base.lproj/Main.storyboard
+++ b/IPSX/Storyboard/Base.lproj/Main.storyboard
@@ -255,7 +255,7 @@
                                                 <rect key="frame" x="0.0" y="0.0" width="100" height="43"/>
                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                 <connections>
-                                                    <segue destination="beU-4n-wfr" kind="presentation" id="mcy-01-359"/>
+                                                    <segue destination="beU-4n-wfr" kind="show" id="mcy-01-359"/>
                                                 </connections>
                                             </button>
                                         </subviews>
