Add filters screen and basic logic

--- a/IPSX/Storyboard/Base.lproj/Main.storyboard
+++ b/IPSX/Storyboard/Base.lproj/Main.storyboard
@@ -165,6 +165,9 @@
                                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gSL-qD-lP3">
                                                 <rect key="frame" x="0.0" y="-1" width="100" height="45"/>
                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                                <connections>
+                                                    <segue destination="ggr-gu-M0i" kind="presentation" modalPresentationStyle="fullScreen" modalTransitionStyle="crossDissolve" id="f1S-eT-YU2"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -549,6 +552,14 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bfk-jU-FP3" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-78" y="1524"/>
+        </scene>
+        <!--MarketFilterID-->
+        <scene sceneID="sOl-jU-QfJ">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Market" referencedIdentifier="MarketFilterID" id="ggr-gu-M0i" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="OGD-Il-9gQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-74" y="1741"/>
         </scene>
         <!--MarketTutorialID-->
         <scene sceneID="Noi-tx-QFR">
@@ -1913,7 +1924,7 @@
         <image name="favorites" width="19.666666030883789" height="17.333333969116211"/>
         <image name="filter" width="19.333333969116211" height="17.666666030883789"/>
         <image name="flag" width="26" height="28.333333969116211"/>
-        <image name="ipsxIcon" width="14" height="14"/>
+        <image name="ipsxIcon" width="16" height="16"/>
         <image name="locked" width="12.333333015441895" height="16"/>
         <image name="moreMenu" width="5.3333334922790527" height="17.666666030883789"/>
         <image name="providerNotSubmitted" width="36" height="36"/>
@@ -1921,6 +1932,6 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="fqj-8c-i0g"/>
-        <segue reference="eg6-mz-aaC"/>
+        <segue reference="2RJ-YM-lk1"/>
     </inferredMetricsTieBreakers>
 </document>
